Public point service implementation